--- a/config.html
+++ b/config.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Teams Tab Config</title>
+<meta charset="UTF-8" />
+<title>Configure Teams Transcript</title>
+<script src="https://res.cdn.office.net/teams-js/2.13.0/js/MicrosoftTeams.min.js"></script>
 </head>
 <body>
-    <h1>Teams Tab Configuration Page</h1>
-    <p>This is a placeholder page for testing your Teams tab.</p>
+<h3> Teams Transcript App Setup</h3>
+<p>Select configuration options, then click <b>Save</b> in Teams.</p>
+ 
+  <script>
+    microsoftTeams.app.initialize().then(() => {
+        microsoftTeams.pages.config.registerOnSaveHandler((saveEvent) => {
+            microsoftTeams.pages.config.setConfig({
+                entityId: "tab",
+                contentUrl: "https://your-domain.com/tab",
+                websiteUrl: "https://your-domain.com/",
+                suggestedDisplayName: "Teams Transcript"
+            });
+            saveEvent.notifySuccess();
+        });
+ 
+        // Enable Save button
+        microsoftTeams.pages.config.setValidityState(true);
+    });
+</script>
 </body>
 </html>
