--- a/config.html
+++ b/config.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title>Configure Fluke UBI Teams Transcript</title>
+<script src="https://res.cdn.office.net/teams-js/2.13.0/js/MicrosoftTeams.min.js"></script>
+</head>
+<body>
+<h3>Fluke UBI Teams Transcript App Setup</h3>
+<p>Select configuration options, then click <b>Save</b> in Teams.</p>
+ 
 <script src="https://res.cdn.office.net/teams-js/2.13.0/js/MicrosoftTeams.min.js"></script>
 <script>
     microsoftTeams.app.initialize().then(() => {
@@ -18,3 +29,5 @@
         });
     }).catch(err => console.error("Teams SDK init failed:", err));
 </script>
+</body>
+</html>
