--- a/tab.html
+++ b/tab.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <title>Fluke Transcript Tab</title>
-</head>
+<head><title>Fluke Transcript Tab</title></head>
 <body>
-    <h2>Welcome to Fluke Transcript Tab</h2>
-    <p>Your tab is now active!</p>
+<h2>Welcome to Fluke Transcript Tab</h2>
+<p>Your tab is now active!</p>
 </body>
 </html>
