--- a/config.html
+++ b/config.html
@@ -14,7 +14,7 @@
         microsoftTeams.pages.config.registerOnSaveHandler((saveEvent) => {
             microsoftTeams.pages.config.setConfig({
                 entityId: "fluke-ubi-tab",
-                contentUrl: "https://rekhakiranmai.github.io/TeamsTest/config.html",
+                contentUrl: "https://rekhakiranmai.github.io/TeamsTest/tab.html",
                 websiteUrl: "https://rekhakiranmai.github.io/TeamsTest/",
                 suggestedDisplayName: "Fluke UBI Teams Transcript"
             });
